--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,4 +69,26 @@ header {
     width: 120%;
     height: 600px;
     background: url('../images/christmas-market-sparkle-deco.jpg') no-repeat center center;
+    
+}
+
+#main-image-outer {
+    overflow: hidden;
+    position: relative;
+}
+
+#image-slogan {
+    text-transform: uppercase;
+    font-size: 120%;
+    font-family: 'Montserrat', sans-serif;
+    width: 250px;
+    height: 130px;
+    padding-top: 20px;
+    padding-left: 10px;
+    color: #FFFAFA;
+    background-color: rgba(0, 0, 0, 0.7);
+    bottom: 20px;
+    left: 30px;
+    position: absolute;
+    border: 1px solid #FFFAFA;
 }
