--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ header {
     padding-left: 10px;
     color: #FFFAFA;
     background-color: rgba(0, 0, 0, 0.7);
-    bottom: 20px;
+    bottom: 30px;
     left: 30px;
     position: absolute;
     border: 1px solid #FFFAFA;
@@ -114,7 +114,7 @@ header {
 #info-div {
     width: 25%;
     height: 75%;
-    background-color: rgba(27, 97, 43, 0.8)
+    background-color: #FFFAFA;
 }
 
 #festivities-div {
@@ -127,4 +127,27 @@ header {
     width: 25%;
     height: 75%;
     background-color: rgba(162, 73, 54, 0.8)
+}
+
+.info-div-headings {
+    color: #E11C21;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    padding-bottom: 1.5rem;
+}
+
+h3 i {
+    padding-right: 20px;
+    color: #1B612B;
+}
+
+#info-div h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #1B612B;
+}
+
+#info-div p {
+    font-family: 'Montserrat', sans-serif;
+    color: black;
 }
