--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,15 +118,31 @@ header {
 }
 
 #festivities-div {
-    width: 25%;
-    height: 75%;
-    background-color: rgba(27, 97, 43, 0.8)
+    background: url('../images/carousel-image.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 #competition-div {
+    background: url('../images/northern-lights-image.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+#festivities-div , #competition-div {
     width: 25%;
     height: 75%;
-    background-color: rgba(162, 73, 54, 0.8)
+    border: 3px solid #E11C21;
+    border-radius: 6%;
+    position: relative;
+    overflow: hidden;
+}
+
+.writing-for-div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 6%;
+    
 }
 
 .info-div-headings {
@@ -151,3 +167,13 @@ h3 i {
     font-family: 'Montserrat', sans-serif;
     color: black;
 }
+
+.pathway-header {
+    color: #FFFAFA;
+    padding-top: 55px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: underline;
+
+}
+
