Add contact info and social media icons to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,10 @@ h3 i {
     width: 10%;
 }
 
+#map-section {
+    background-color: #FFFAFA;
+}
+
 #pin {
     margin-left: 10px;
     letter-spacing: 4px;
