--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,16 @@ h3 i {
 #info-div h3 {
     font-family: 'Montserrat', sans-serif;
     color: #1B612B;
+}
+
+#dates {
     letter-spacing: 4px;
+}
+
+#open-times {
+    text-align: center;
+    font-size: 95%;
+    padding-bottom: 1.5rem;
 }
 
 #info-div p {
@@ -232,19 +241,38 @@ footer {
 
 #social-media > li {
     display: inline-block;
+    color: #FFFAFA;
+    padding-left: 20px;
+    font-size: 150%;
+}
+
+#social-media a:visited {
+    text-decoration: none;
+    color: #FFFAFA;
+}
+
+#social-media a:hover {
+    text-decoration: none;
+    color: #FFFAFA;
+    font-size: 155%;
 }
 
 #social-div-container {
     display: flex;
     align-items: center;
-    width: 25%;
+    justify-content: flex-end;
+    width: 30%;
+    padding-right: 30px;
 }
 
 .footer-text {
     color: #FFFAFA;
 }
 
-
+#contact-info {
+    width: 40%;
+    text-align: center;
+}
 
 #contact-info > p {
     display: inline-block;
@@ -258,12 +286,7 @@ footer {
     text-decoration: underline overline;
 }
 
-#email {
-    color: #E11C21;
-}
-
 #copyright-container {
-    padding-left: 150px;
-    padding-right: 150px;
-    width: 25%;
+    width: 30%;
+    padding-left: 30px;
 }
