--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ header {
 #index-main-image {
     width: 120%;
     height: 600px;
-    background: url('../images/christmas-market-sparkle-deco.jpg') no-repeat center center;
+    background: url('../images/christmas-market-sparkle-deco\ .jpg') no-repeat center center;
     
 }
 
@@ -196,7 +196,7 @@ h3 i {
 
 .pathway-header {
     color: #FFFAFA;
-    padding-top: 55px;
+    padding-top: 35px;
     text-transform: uppercase;
     text-decoration: underline overline;
     text-align: center;
@@ -205,7 +205,7 @@ h3 i {
 
 .pathway-paragraph {
     color: #FFFAFA;
-    padding-top: 35px;
+    padding-top: 25px;
     margin-left: 35px;
     margin-right: 35px;
     font-family: 'Montserrat', sans-serif;
@@ -220,7 +220,7 @@ h3 i {
     text-align: center;
     background-color: #a24936;
     position: absolute;
-    bottom: 50px;
+    bottom: 45px;
     right: 0;
     border-top: 1px solid #FFFAFA;
     border-bottom: 1px solid #FFFAFA;
