--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,7 +441,7 @@ footer {
     }
 }
 
-/* For large to medium screens from 900px wide and down */
+/* For medium screens from 900px wide and down */
 @media screen and (max-width: 900px) {
     .footer-text {
         font-size: 85%;
@@ -454,9 +454,24 @@ footer {
     }
 }
 
-/* For large to medium screens from 700px wide and down */
+/* For medium screens from 700px wide and down */
 @media screen and (max-width: 700px) {
     #menu a {
         font-size: 80%;
+    }
+    #index-main-image {
+        width: 100%;
+        height: 400px;
+    }
+    #image-slogan {
+        font-size: 90%;
+        width: 190px;
+        height: 80px;
+        padding: 5px;
+        border: 2px solid #FFFAFA;
+    }
+    #dates {
+        font-size: 100%;
+        letter-spacing: 3px;
     }
 }
