--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ h3 i {
 /* Map section styling */
 
 #find-us {
-    margin-left: 30px;
+    margin-left: 2%;
     color: #1B612B;
     background-color: #FFFAFA;
     padding-bottom: 3px;
