--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 /* Header styling */
 
-header {
+.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -398,31 +398,29 @@ footer {
 
 /* For large screens from 1150px wide and down */
 @media screen and (max-width: 1150px) {
-    header {
+    .navbar {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
-    header a {
+    .navbar a {
         height: 200px;
-        margin: 0 auto;
-    }
+        margin: 0 auto; 
+    } 
     #logo {
         display: block;
         margin-left: auto;
         margin-right: auto;
-    }
-    nav {
-        width: 100%;
-        background-color: #1B612B;
-        height: 45px;
     }
     #menu {
         display: flex;
         justify-content: center;
         height: 45px;
         align-items: center;
+        background-color: #1B612B;
+        width: 100%;
     }
     #menu li {
         text-align: center;
