--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,17 +69,27 @@ body {
     border-bottom: 1px solid #E11C21;
 }
 
-.hamburger {
-    background-color: transparent;
-    border: 0;
-    color: #FFFAFA;
-    font-size: 200%;
+.toggle-button {
+    position: absolute;
     display: none;
     cursor: pointer;
+    top: .75rem;
+    right: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
 }
 
-.hamburger:focus {
+.toggle-button:focus {
     outline: none;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #1B612B;
 }
 
 /* Index page main image styling */
@@ -405,7 +415,7 @@ footer {
         align-items: center;
         width: 100%;
     }
-    .navbar a {
+    .navbar .logo {
         height: 200px;
         margin: 0 auto; 
     } 
@@ -526,20 +536,20 @@ footer {
 
 /* For medium screens from 600px wide and down */
 @media screen and (max-width: 600px) {
-    #nav {
+   .toggle-button {
         display: flex;
-        justify-content: flex-end;
-    }
-    #menu {
-        display: none;
-        width: 100%;
-        
-    }
-    #menu.show {
-        display: flex;
-    }
-    .hamburger {
-        display: inline-block;
-
-    }
+   }
+   #menu {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    /* display: none; */
+   }
+   .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+   }
+   #menu li {
+     width: 100%
+   }
 }
