--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body {
     border-bottom: 1px solid #E11C21;
 }
 
-.active {
+.menu a.active {
     border-bottom: 1px solid #E11C21;
 }
 
@@ -73,7 +73,7 @@ body {
     position: absolute;
     display: none;
     cursor: pointer;
-    top: 50;
+    top: 42.5px;
     right: 1rem;
     flex-direction: column;
     justify-content: space-between;
@@ -447,7 +447,7 @@ footer {
         border-bottom: 3px solid #E11C21;
     }
     
-    .active {
+    .menu a.active {
         border-bottom: 3px solid #E11C21;
     }
     #info-plus-pathway-section {
@@ -544,18 +544,21 @@ footer {
     width: 100%;
     height: 100%;
     display: none;
+    
+    background-color: #FFFAFA;
    }
    .navbar {
     flex-direction: column;
     align-items: flex-start;
-    height: 140px;
    }
    .menu li {
-     width: 100%
+     width: 100%;
+     margin-bottom: 5px
    }
    .menu a {
     width: 100%;
-    padding: 0.5rem 1rem
+    padding: 0;
+    color: #1B612B;
   }
   .menu.active {
     display: flex;
@@ -568,4 +571,18 @@ footer {
     #logo {
     height: 135px;
   }
+  .menu a.active {
+    border-bottom: none;
+}
+.menu li:hover {
+    background-color: #1B612B;
+    
+}
+.menu a:hover {
+    border-bottom: none;
+    color: #FFFAFA;
+}
+.menu li a {
+    display: block;
+}
 }
