Update button on info-plus-pathway-section
git status

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,6 +254,11 @@ h3 i {
     font-family: 'Montserrat', sans-serif;
     color: #FFFAFA;
     text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Map section styling */
