Update width of info-plus-pathway-section under 525px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -691,4 +691,7 @@ footer {
     justify-content: flex-start;
     width: 30%;
     }
+    #info-div, #festivities-div, #competition-div {
+        width: 96%;
+    }
 }
