--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,9 +96,9 @@ body {
 
 #index-main-image {
     width: 100%;
-    height: 600px;
     background: url('../images/hero-image.jpg') no-repeat center center;
-    
+    height: 400px; 
+    background-size: cover;
 }
 
 #main-image-outer {
@@ -512,10 +512,6 @@ footer {
     #address-details {
         text-align: left;
     }
-    #index-main-image {
-        width: 100%;
-        height: 450px;
-    }
     #image-slogan {
         font-size: 95%;
         width: 190px;
@@ -527,10 +523,6 @@ footer {
 
 /* For large to medium screens from 900px wide and down */
 @media screen and (max-width: 900px) {
-    #index-main-image {
-        width: 100%;
-        height: 400px;
-    }
     #image-slogan {
         font-size: 90%;
         width: 180px;
@@ -554,10 +546,6 @@ footer {
     .menu a {
         font-size: 80%;
     }
-    #index-main-image {
-        width: 100%;
-        height: 350px;
-    }
     #image-slogan {
         font-size: 90%;
         width: 180px;
@@ -575,10 +563,6 @@ footer {
 @media screen and (max-width: 600px) {
     body {
         font-size: 90%;
-    }
-    #index-main-image {
-        width: 100%;
-        height: 300px;
     }
     #image-slogan {
         font-size: 90%;
@@ -709,10 +693,6 @@ footer {
 
 /* For x-small screens from 410px wide and down */
 @media screen and (max-width: 410px) {
-    #index-main-image {
-        width: 100%;
-        height: 250px;
-    }
     #image-slogan {
         font-size: 70%;
         width: 145px;
